--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <canvas id="gameCanvas"></canvas>
         <div id="side-panel">
             <div id="hud">
-                Score: 0
+                Score: 0 <br>
+                Lines: 0 <br>
+                Level: 1
             </div>
             <div>
                 <div class="label">Next</div>
